[package]
name = "icloud-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1.16", features = ["full"] } 
fuser = "0.10"
uuid = "0.8"
async-recursion = "1"
icloud = { git = "https://github.com/ReverentEngineer/icloud-rs" }
